cluster/apps/offsite-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: offsite-kuma
  namespace: offsite-kuma
spec:
  type: ExternalName
  externalName: 100.83.21.51
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
