cluster/apps/offsite-kuma/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: offsite-kuma
  namespace: offsite-kuma
  annotations:
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "DENY"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
  - host: "https://status.${SECRET_PUBLIC_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: offsite-kuma
            port:
              number: 3001
        path: /
        pathType: Prefix
  tls:
  - secretName: "${SECRET_PUBLIC_DOMAIN_CERT}"
